# paradox

./: CMakeLists.txt  LICENSE  NOTICE.md  README.md
.github/workflows/: ci.yml
examples/: basic_usage.cpp  example.cpp  magic_circuit.cpp  mechanics_magic.cpp  physics_examples.cpp  test_example.cpp  test_math.cpp  test_math_correctness.cpp  test_spirit_simple.cpp  thermodynamics_magic.cpp
include/paradox/: dspirit.h  spirit_float.h
src/: CMakeLists.txt  dspirit.cpp  spirit_float.cpp
